tests/neg-macros/annot-in-quote.check
-- Error: tests/neg-macros/annot-in-quote.scala:9:13 -------------------------------------------------------------------
9 |  @annot def g = 4 // error
  |  ^^^^^^^^^^^^^^^^
  |  implementation restriction: TASTy annotations can not be used in staged code
